kubernetes-manifest/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: three-tier-app
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: "topology.kubernetes.io/zone"
                operator: In
                values: ["us-east-1"]

        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: frontend
              topologyKey: "kubernetes.io/hostname"

        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values: [backend]
              topologyKey: "kubernetes.io/hostname"

      serviceAccountName: three-tier-app
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: backend
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: true
        startupProbe:
          httpGet:
            path: /startup
            port: 5050
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 60
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /ready
            port: 5050
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: /health
            port: 5050
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 30
          failureThreshold: 3
          successThreshold: 1
        image: santoshpalla27/3-tier:backend-2
        ports:
        - containerPort: 5050
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: three-tier-app
spec:
  ports:
  - port: 5050
    targetPort: 5050
  selector:
    app: backend
